--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@
 		<div class="sixteen columns">
 			<h2><span>Next event:</span> StudioCo.de = Community</h2>
 			
-			<p>We're having an event, and we'd love for you to come. Greg Ash, Creative Director of 160over90 (Gainesville) will be speaking on our theme: Community. It's what we're celebrating, after all. We love the idea of our creative community getting together and sharing some inspiration and goodness.</p>
+			<p>We're having an event, and we'd love for you to come. <a href="http://designedbyable.com/" target="_blank">Greg Ash</a>, Creative Director of <a href="http://www.160over90.com/" target="_blank">160over90</a> (Gainesville) will be speaking on our theme: Community. It's what we're celebrating, after all. We love the idea of our creative community getting together and sharing some inspiration and goodness.</p>
 
-			<p>We'll have coffee provided by Gulejo, and the Ameraucana Wood Fire food truck will be parked outside to satisfy all of your pizza cravings. We've even had some independent artists donate some super awesome giveaway items. The event is free and open to the public, so please invite anyone you think might be interested!</p>
+			<p>We'll have coffee provided by <a href="http://gulejo.com/" target="_blank">Gulejo</a>, and the <a href="https://www.facebook.com/AmeraucanaWoodFire" target="_blank">Ameraucana Wood Fire</a> food truck will be parked outside to satisfy all of your pizza cravings. We've even had some independent artists donate some super awesome giveaway items. The event is free and open to the public, so please invite anyone you think might be interested!</p>
 
 			<p>Come meet the talented people in our creative community, get inspired, and get energized to make something great. We can't wait to meet you!</p>
 		</div><!-- end sixteen columns div -->
