--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 	<link rel="apple-touch-icon" href="images/apple-touch-icon.png">
 	<link rel="apple-touch-icon" sizes="72x72" href="images/apple-touch-icon-72x72.png">
 	<link rel="apple-touch-icon" sizes="114x114" href="images/apple-touch-icon-114x114.png"> -->
-
+	<link href='http://fonts.googleapis.com/css?family=Crimson+Text:400,400italic|Montserrat:400,700' rel='stylesheet' type='text/css'>
 </head>
 <body>
 	<header data-js="suchScroll" data-speed="50">
