Fixed next event small heading.

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 		<div class="header__billboard container">
 			<div class="sixteen columns">
 				<h1 class="header__logo">StudioCo.de</h1>
-				<h2>We promote <em>creativity</em>, <em>networking</em> and <em>collaboration</em></h2>
+				<h2>We promote creativity, networking and collaboration</h2>
 			</div>
 		</div>
 		<nav class="header__nav">
