nav bar and heading styles.

--- a/index.html
+++ b/index.html
@@ -25,18 +25,18 @@
 				<h2>We promote creativity, networking and collaboration</h2>
 			</div>
 		</div>
-		<nav class="header__nav">
+		<div class="header__nav">
 			<div class="container">
-				<div class="four columns">
+				<div class="sixteen columns">
 					<h2>StudioCo.de</h2>
-				</div>
-				<div class="twelve columns">
-					<a href="">Events</a>
-					<a href="">About</a>
-					<a href="">FAQs</a>
+					<nav>
+						<a href="" class="-current">Events</a>
+						<a href="">About</a>
+						<a href="">FAQs</a>
+					</nav>
 				</div>
 			</div>
-		</nav>
+		</div>
 		<div class="fade-screen">
 	</header>
 
