--- a/index.html
+++ b/index.html
@@ -56,6 +56,15 @@
 
 </div><!-- close next-event div -->
 
+<div class="newsletter">
+	<div class="container">
+		<div class="sixteen columns">
+			<a class="button" href="http://eepurl.com/NkU5r">Sign up for our newsletter</a>
+		</div>
+	</div>
+</div><!--end newsletter div -->
+
+
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
 <script src="js/interface.js"></script>
 </body>
