--- a/index.html
+++ b/index.html
@@ -56,6 +56,8 @@
 
 </div><!-- close next-event div -->
 
+
+
 <div class="newsletter">
 	<div class="container">
 		<div class="sixteen columns">
@@ -63,6 +65,24 @@
 		</div>
 	</div>
 </div><!--end newsletter div -->
+
+
+
+<div class="about">
+	<div class="container">
+		<div class="sixteen columns">
+			<h2>About StudioCo.de</h2>
+			
+			<p>StudioCo.de is a local organization whose mission is to promote creativity, networking and collaboration. We're new in town, but we've got a lot of awesome planned. We'll be hosting a monthly lecture series, providing educational opportunities, and putting together workshops for the Gainesville creative community.</p>
+
+			<p>Just so we're on the same page, we use the term creative pretty broadly — artists, designers, students, developers, artisans, photographers, calligraphers, knitters, illustrators, sculptors, creative directors, welders, bakers, stylists and anyone else who considers themselves to be creative — we want you all to feel included.</p>
+
+			<p>We hope you'll join us!</p>
+		</div><!-- end sixteen columns div -->
+
+	</div><!-- end container div-->
+
+</div><!-- close about div -->
 
 
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
