Updated primary sections with id anchors for nav.

--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
 				<div class="sixteen columns">
 					<h2>StudioCo.de</h2>
 					<nav>
-						<a href="" class="-current">Events</a>
-						<a href="">About</a>
-						<a href="">FAQs</a>
+						<a href="#events" class="-current">Events</a>
+						<a href="#newsletter">Newsletter</a>
+						<a href="#about">About</a>
 					</nav>
 				</div>
 			</div>
@@ -40,7 +40,7 @@
 		<div class="fade-screen">
 	</header>
 
-<div class="next-event">
+<section class="next-event" id="events">
 	<div class="container">
 		<div class="sixteen columns">
 			<h2><span>Next event:</span> StudioCo.de = Community</h2>
@@ -54,21 +54,21 @@
 
 	</div><!-- end container div-->
 
-</div><!-- close next-event div -->
+</section><!-- close next-event section -->
 
 
 
-<div class="newsletter">
+<section class="newsletter" id="newsletter">
 	<div class="container">
 		<div class="sixteen columns">
 			<a class="button" href="http://eepurl.com/NkU5r">Sign up for our newsletter</a>
 		</div>
 	</div>
-</div><!--end newsletter div -->
+</section><!--end newsletter section -->
 
 
 
-<div class="about">
+<section class="about" id="about">
 	<div class="container">
 		<div class="sixteen columns">
 			<h2>About StudioCo.de</h2>
@@ -82,7 +82,7 @@
 
 	</div><!-- end container div-->
 
-</div><!-- close about div -->
+</section><!-- close about section -->
 
 
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
