JS magic for nav scrolly goodness.

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 				<div class="sixteen columns">
 					<h2>StudioCo.de</h2>
 					<nav>
-						<a href="#events" class="-current">Events</a>
+						<a href="#events">Events</a>
 						<a href="#newsletter">Newsletter</a>
 						<a href="#about">About</a>
 					</nav>
@@ -40,7 +40,7 @@
 		<div class="fade-screen">
 	</header>
 
-<section class="next-event" id="events">
+<section class="next-event layer" id="events">
 	<div class="container">
 		<div class="sixteen columns">
 			<h2><span>Next event:</span> StudioCo.de = Community</h2>
@@ -58,7 +58,7 @@
 
 
 
-<section class="newsletter" id="newsletter">
+<section class="newsletter layer" id="newsletter">
 	<div class="container">
 		<div class="sixteen columns">
 			<a class="button" href="http://eepurl.com/NkU5r">Sign up for our newsletter</a>
@@ -68,7 +68,7 @@
 
 
 
-<section class="about" id="about">
+<section class="about layer" id="about">
 	<div class="container">
 		<div class="sixteen columns">
 			<h2>About StudioCo.de</h2>
