Super basic footer for launch
Had to make the footer chunky to give the about us section room to
trigger the nav scroll event.

--- a/index.html
+++ b/index.html
@@ -85,6 +85,17 @@
 
 </section><!-- close about section -->
 
+<footer>
+	<div class="container">
+		<div class="sixteen columns">
+			<h3>Connect</h3>
+			<a href=""><i class="fa fa-facebook"></i></a>
+			<a href=""><i class="fa fa-twitter"></i></a>
+			<h3 class="footer__logo">StudioCo.de</h3>
+			<p>© 2014 StudioCo.de</p>
+		</div>
+	</div>
+</footer>
 
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
 <script src="js/interface.js"></script>
