Added social link anchors to the footer.

--- a/index.html
+++ b/index.html
@@ -89,8 +89,8 @@
 	<div class="container">
 		<div class="sixteen columns">
 			<h3>Connect</h3>
-			<a href=""><i class="fa fa-facebook"></i></a>
-			<a href=""><i class="fa fa-twitter"></i></a>
+			<a href="https://www.facebook.com/StudioCo.deGnv"><i class="fa fa-facebook"></i></a>
+			<a href="https://twitter.com/studio_code"><i class="fa fa-twitter"></i></a>
 			<h3 class="footer__logo">StudioCo.de</h3>
 			<p>© 2014 StudioCo.de</p>
 		</div>
