Added favicon. Closes #8.

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 	<!--[if lt IE 9]>
 		<script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
 	<![endif]-->
-	<!-- <link rel="shortcut icon" href="images/favicon.ico">
-	<link rel="apple-touch-icon" href="images/apple-touch-icon.png">
+	<link rel="shortcut icon" href="img/favicon.ico">
+	<!-- <link rel="apple-touch-icon" href="images/apple-touch-icon.png">
 	<link rel="apple-touch-icon" sizes="72x72" href="images/apple-touch-icon-72x72.png">
 	<link rel="apple-touch-icon" sizes="114x114" href="images/apple-touch-icon-114x114.png"> -->
 	<link href='http://fonts.googleapis.com/css?family=Crimson+Text:400,400italic|Montserrat:400,700' rel='stylesheet' type='text/css'>
