--- a/index.html
+++ b/index.html
@@ -91,6 +91,7 @@
 			<h3>Connect</h3>
 			<a href="https://www.facebook.com/StudioCo.deGnv"><i class="fa fa-facebook"></i></a>
 			<a href="https://twitter.com/studio_code"><i class="fa fa-twitter"></i></a>
+			<a href="mailto:hello@studioco.de"><i class="fa fa-envelope"></i></a>
 			<h3 class="footer__logo">StudioCo.de</h3>
 			<p>© 2014 StudioCo.de</p>
 		</div>
