--- a/index.html
+++ b/index.html
@@ -44,9 +44,11 @@
 <section class="next-event layer" id="events">
 	<div class="container">
 		<div class="sixteen columns">
-			<h2><span>Next event:</span> StudioCo.de = Community</h2>
+			<h2><span>Next event:</span> StudioCo.de = Community<span>February 27, 5:30 p.m., Starter Space</span></h2>
 			
 			<p>We're having an event, and we'd love for you to come. <a href="http://designedbyable.com/" target="_blank">Greg Ash</a>, Creative Director of <a href="http://www.160over90.com/" target="_blank">160over90</a> (Gainesville) will be speaking on our theme: Community. It's what we're celebrating, after all. We love the idea of our creative community getting together and sharing some inspiration and goodness.</p>
+
+			<p>The event is February 27 at 5:30 p.m. at <a href="http://starterspace.com"/>Starter Space</a> downtown. The address is <a href="https://maps.google.com/maps?q=308+W+University+Ave,+Gainesville,+FL&ie=UTF-8&ei=WNIEU9--JZKFkQf_8oGwAw&ved=0CAcQ_AUoAQ" target="_blank">308 W University Avenue</a>, and it's located in the old Firestone building just east of the Seagle building. It's free for anyone and everyone to attend, although if you'd like to make a donation, we will be accepting them. 
 
 			<p>We'll have coffee provided by <a href="http://gulejo.com/" target="_blank">Gulejo</a>, and the <a href="https://www.facebook.com/AmeraucanaWoodFire" target="_blank">Ameraucana Wood Fire</a> food truck will be parked outside to satisfy all of your pizza cravings. We've even had some independent artists donate some super awesome giveaway items. The event is free and open to the public, so please invite anyone you think might be interested!</p>
 
